modified:   adminsdashboard.html 	modified:   css/admin.css 	modified:   css/signup.css 	modified:   devices.html 	modified:   login.html 	new file:   repair.html 	new file:   users.html

--- a/devices.html
+++ b/devices.html
@@ -177,7 +177,7 @@
 
   <div class="modal fade" id="animodal">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content modal-dialog-centered">
 
             <div class="modal-header" style="background-color:#2d3d6c;">
                 <div class="modal-title">
