--- a/login.html
+++ b/login.html
@@ -58,8 +58,11 @@
                     <div class="input-group mb-3">
                         <button class="btn btn-lg btn-light w-100 fs-6 google-button"><img src="./res/google.png" style="width: 25px;" class="me-2"><small>Sign In with Google</small></button>
                     </div>
-                    <div class="row">
+                    <div class="row mb-4">
                         <small>Don't have account? <a style="text-decoration: none;" href="signup.html">Sign Up</a></small>
+                    </div>
+                    <div>
+                        <small><a class="text-white adminlog" style="text-decoration: none;" href="adminsdashboard.html">admin</a></small>
                     </div>
                 </div>
             </div>
