--- a/adminsdashboard.html
+++ b/adminsdashboard.html
@@ -22,21 +22,21 @@
         <ul class="menu">
 
             <li class="active">
-                <a href="">
+                <a href="adminsdashboard.html">
                     <i class="fas fa-message"></i>
                     <span>Inquiries</span>
                 </a>
             </li>
 
             <li>
-                <a href="">
+                <a href="repair.html">
                     <i class="fas fa-screwdriver-wrench"></i>
                     <span>Repair</span>
                 </a>
             </li>
 
             <li>
-                <a href="">
+                <a href="users.html">
                     <i class="fas fa-user"></i>
                     <span>Users</span>
                 </a>
@@ -86,10 +86,13 @@
         </div>
 
         <div class="card-container">
-            <h1 class="main-title">Today's Inquiry</h1>
+            <h1 class="main-title">Inquiries</h1>
             <div class="form-wrapper">
                 <table class="table table-striped table-hover align-middle caption-top table-responsive">
-                    <caption><button class="btn btn-success"><i class="fa-solid fa-arrows-rotate"></i></button></caption>
+                    <caption>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#inquirymodal"><i class="fa-solid fa-file-circle-plus"></i></button>
+                        <a href="adminsdashboard.html"><button class="btn btn-success"><i class="fa-solid fa-arrows-rotate"></i></button></a>
+                    </caption>
                     <thead class="table-dark">
                       <tr>
                         <th >Date</th>
@@ -114,13 +117,13 @@
                         <td>Mother Board Level</td>
                         <td>My Phone went black</td>
                         <td>
-                            <button class="btn btn-primary"><i class="fa-solid fa-envelope"></i></button>
-                            <button class="btn btn-warning"><i class="fa-solid fa-plus"></i></button>
-                            <button class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></button>
+                            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#messmodal"><i class="fa-solid fa-envelope"></i></button>
+                            <button class="btn btn-warning" onclick="alert('Added to Repair Tab')" ><i class="fa-solid fa-plus"></i></button>
+                            <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deletemodal"><i class="fa-solid fa-trash-can"></i></button>
                         </td>
                       </tr>
                       <tr>
-                        <th scope="row">01/01/23</th>
+                        <th scope="row">02/11/23</th>
                         <td>Many Marquez</td>
                         <td>+639123456789</td>
                         <td>manny101@yahoo.com</td>
@@ -129,13 +132,28 @@
                         <td>Battery</td>
                         <td>My Laptop is not charging</td>
                         <td>
-                            <button class="btn btn-primary"><i class="fa-solid fa-envelope"></i></button>
-                            <button class="btn btn-warning"><i class="fa-solid fa-plus"></i></button>
-                            <button class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></button>
+                            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#messmodal"><i class="fa-solid fa-envelope"></i></button>
+                            <button class="btn btn-warning" onclick="alert('Added to Repair Tab')" ><i class="fa-solid fa-plus"></i></button>
+                            <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deletemodal"><i class="fa-solid fa-trash-can"></i></button>
                         </td>
                       </tr>
                       <tr>
-                        <th scope="row">01/01/23</th>
+                        <th scope="row">02/15/23</th>
+                        <td>Mckinley Manaog</td>
+                        <td>+639123456789</td>
+                        <td>kinkin18@gmail.com</td>
+                        <td>HP Deskjet</td>
+                        <td>3520000001</td>
+                        <td>Printer Head</td>
+                        <td>No magenta color detected</td>
+                        <td>
+                            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#messmodal"><i class="fa-solid fa-envelope"></i></button>
+                            <button class="btn btn-warning" onclick="alert('Added to Repair Tab')" ><i class="fa-solid fa-plus"></i></button>
+                            <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deletemodal"><i class="fa-solid fa-trash-can"></i></button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <th scope="row">03/01/23</th>
                         <td>Mark Otto</td>
                         <td>+639123456789</td>
                         <td>ottomark@gmail.com</td>
@@ -144,39 +162,24 @@
                         <td>Mother Board Level</td>
                         <td>My Phone went black</td>
                         <td>
-                            <button class="btn btn-primary"><i class="fa-solid fa-envelope"></i></button>
-                            <button class="btn btn-warning"><i class="fa-solid fa-plus"></i></button>
-                            <button class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></button>
+                            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#messmodal"><i class="fa-solid fa-envelope"></i></button>
+                            <button class="btn btn-warning" onclick="alert('Added to Repair Tab')" ><i class="fa-solid fa-plus"></i></button>
+                            <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deletemodal"><i class="fa-solid fa-trash-can"></i></button>
                         </td>
                       </tr>
                       <tr>
-                        <th scope="row">01/01/23</th>
-                        <td>Mark Otto</td>
+                        <th scope="row">03/08/23</th>
+                        <td>Lucas Ibañez</td>
                         <td>+639123456789</td>
-                        <td>ottomark@gmail.com</td>
-                        <td>Xiaomi 13 Ultra</td>
+                        <td>lucas102@gmail.com</td>
+                        <td>Acer Aspire 7</td>
                         <td>3520000001</td>
-                        <td>Mother Board Level</td>
-                        <td>My Phone went black</td>
+                        <td>Operating System</td>
+                        <td>Upgrade my laptop to Windows 11</td>
                         <td>
-                            <button class="btn btn-primary"><i class="fa-solid fa-envelope"></i></button>
-                            <button class="btn btn-warning"><i class="fa-solid fa-plus"></i></button>
-                            <button class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></button>
-                        </td>
-                      </tr>
-                      <tr>
-                        <th scope="row">01/01/23</th>
-                        <td>Mark Otto</td>
-                        <td>+639123456789</td>
-                        <td>ottomark@gmail.com</td>
-                        <td>Xiaomi 13 Ultra</td>
-                        <td>3520000001</td>
-                        <td>Mother Board Level</td>
-                        <td>My Phone went black</td>
-                        <td>
-                            <button class="btn btn-primary"><i class="fa-solid fa-envelope"></i></button>
-                            <button class="btn btn-warning"><i class="fa-solid fa-plus"></i></button>
-                            <button class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></button>
+                            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#messmodal"><i class="fa-solid fa-envelope"></i></button>
+                            <button class="btn btn-warning" onclick="alert('Added to Repair Tab')" ><i class="fa-solid fa-plus"></i></button>
+                            <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deletemodal"><i class="fa-solid fa-trash-can"></i></button>
                         </td>
                       </tr>
                     </tbody>
@@ -186,5 +189,114 @@
         </div>
 
     </div>
+
+
+    <!--Inquiry Modal-->
+
+<div class="modal fade" id="inquirymodal">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+
+            <div class="modal-header" style="background-color:#2d3d6c;">
+                <div class="modal-title">
+                  <h2 class="title" style="color: #ffff;">Add Inquiry</h2>
+                </div>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+
+            <div class="modal-body">
+              <input type="text" class="form-control mb-2 p-2"  placeholder="Name">
+              <input type="number" class="form-control mb-2 p-2"  placeholder="+63">
+              <input type="email" class="form-control mb-2 p-2"  placeholder="@email">
+              <input type="text" class="form-control mb-2 p-2"  placeholder="Device">
+              <input type="number" class="form-control mb-2 p-2"  placeholder="Model no.">
+        <div class="form-control  mb-2">
+
+          <div class="select-box">
+            <select>
+              <option hidden>Type of Inquiry</option>
+              <option>Check up</option>
+              <option>LCD Replacement</option>
+              <option>Battery Replacement</option>
+              <option>Forgotten Password</option>
+              <option>Bypass</option>
+              <option>Mother Board Level Repair</option>
+            </select>
+          </div>       
+      </div>
+         <textarea class="form-control" placeholder="Write your message here..."></textarea>
+
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="alert('Inquiry added Successfully')"> Submit </button>
+            </div>
+
+        </div>
+    </div>
+</div>
+   <!--Inquiry Modal Ends-->
+
+
+   <!--Message Modal-->
+
+  <div class="modal fade" id="messmodal">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+
+            <div class="modal-header" style="background-color:#2d3d6c;">
+                <div class="modal-title">
+                  <h2 class="title" style="color: #ffff;">New Message</h2>
+                </div>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+
+            <div class="modal-body">
+                <input type="text" class="form-control mb-2 p-2"  placeholder="Recipient : ">
+                <input type="text" class="form-control mb-2 p-2"  placeholder="Subject: ">
+                <textarea name="" id="" class="form-control" style="height: 150px;" placeholder="Write message here..."></textarea>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="alert('Message Sent Successfully')"> Send <i class="fa-solid fa-paper-plane"></i> </button>
+                </div>
+
+            </div>
+        </div>
+   </div>
+</div>
+
+   <!--Message Modal Ends-->
+
+   <!--Delete Modal-->
+
+<div class="modal fade" id="deletemodal">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+
+            <div class="modal-header" style="background-color:#2d3d6c;">
+                <div class="modal-title">
+                 
+                </div>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+
+                <div class="modal-body">
+                    
+                    <h6>Are you sure you want to delete this inquiry?</h6>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">No</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="alert('Deleted Successfully')"> Yes</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+   <!--Delete Modal Ends-->
+
+
 </body>
 </html>
