--- a/users.html
+++ b/users.html
@@ -64,7 +64,7 @@
             </li>
 
             <li class="logout">
-                <a href="">
+                <a href="index.html">
                     <i class="fas fa-right-from-bracket"></i>
                 </a>
             </li>
