modified:   devices.html 	modified:   users.html

--- a/users.html
+++ b/users.html
@@ -134,7 +134,7 @@
                       <tr>
                         <th scope="row">1000011</th>
                         <td>John Mark </td>
-                        <td>Sevillano/td>
+                        <td>Sevillano</td>
                         <td>+639123456789</td>
                         <td>sevillanoJM101@gmail.com</td>
                         <td>Administrator</td>
