--- a/devices.html
+++ b/devices.html
@@ -176,24 +176,24 @@
   <!--Mobile Phone Inquiry Modal-->
 
   <div class="modal fade" id="animodal">
-    <div class="modal-dialog">
-        <div class="modal-content modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
 
             <div class="modal-header" style="background-color:#2d3d6c;">
                 <div class="modal-title">
-                  <h2 class="title" style="color: #ffff;">Customers Inquiry</h2>
+                  <h2 class="title" style="color: #ffff;">Add Inquiry</h2>
                 </div>
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
 
             <div class="modal-body">
-              <input type="text" class="form-control mb-2 p-2"  placeholder="First Name">
-              <input type="text" class="form-control mb-2 p-2"  placeholder="Last Name">
-              <input type="email" class="form-control mb-2 p-2"  placeholder="@email">
-              <input type="text" class="form-control mb-2 p-2"  placeholder="Address">
+              <input type="text" class="form-control mb-2 p-2"  placeholder="Name">
               <input type="number" class="form-control mb-2 p-2"  placeholder="+63">
-              
-              <div class="form-control address">
+              <input type="email" class="form-control mb-2 p-2"  placeholder="@email">
+              <input type="text" class="form-control mb-2 p-2"  placeholder="Device">
+              <input type="number" class="form-control mb-2 p-2"  placeholder="Model no.">
+        <div class="form-control  mb-2">
+
           <div class="select-box">
             <select>
               <option hidden>Type of Inquiry</option>
@@ -204,14 +204,15 @@
               <option>Bypass</option>
               <option>Mother Board Level Repair</option>
             </select>
-          </div>
+          </div>       
       </div>
+         <textarea class="form-control" placeholder="Write your message here..."></textarea>
 
             </div>
 
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="alert('Inquiry Sent Successfully')"> Submit </button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="alert('Inquiry added Successfully')"> Submit </button>
             </div>
 
         </div>
